# genai-lab-notebook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-test.yml
examples/: lab_notes.index  lab_notes.jsonl  usage_example.ipynb  usage_example2.ipynb  usage_example_main.ipynb
src/genai_labnote/: __init__.py  core.py  magic.py  storage.py  summarizer.py
src/genai_labnote.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
