[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genai_labnote"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "An AI-powered lab notebook for Jupyter/Colab."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipython",
    "pandas",
    "faiss-cpu",
    "sentence-transformers",
    "torch",
    "transformers[torch]",
]

[project.urls]
Homepage = "https://github.com/your-username/genai-lab-notebook"
Issues = "https://github.com/your-username/genai-lab-notebook/issues"

[tool.setuptools.packages.find]
where = ["src"]